<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.displayname>${project.artifactId}</project.displayname>
	</properties>
	
	<groupId>com.skytonia</groupId>
	<artifactId>SkyCore</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>
	
	<repositories>
		<repository>
			<id>md_5-snapshots</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
	</repositories>
	
	<dependencies>
		<!-- Spigot/Bukkit Dependency -->
		<dependency>
			<groupId>org.github.paperspigot</groupId>
			<artifactId>paperspigot</artifactId>
			<version>1.8.8-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		
		<!-- Spigot NMS Dependency -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>Spigot-v1_8_R3</artifactId>
			<version>1.8.8-R0.1-SNAPSHOT</version>
			<scope>system</scope>
			<optional>true</optional>
			<systemPath>${project.basedir}/../lib/spigot-1.8.8.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>Spigot-v1_10_R1</artifactId>
			<version>1.10-R0.1-SNAPSHOT</version>
			<scope>system</scope>
			<optional>true</optional>
			<systemPath>${project.basedir}/../lib/spigot-1.10.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>Spigot-v1_11_R1</artifactId>
			<version>1.11-R0.1-SNAPSHOT</version>
			<scope>system</scope>
			<optional>true</optional>
			<systemPath>${project.basedir}/../lib/spigot-1.11.jar</systemPath>
		</dependency>
		
		<!-- Database -->
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>2.4.5</version>
		</dependency>
		
		<!-- Auto-generated Annotations -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.16.10</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>
		
		<!-- Internal Testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<optional>true</optional>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<build>
		<defaultGoal>clean package install</defaultGoal>
		<finalName>${project.artifactId}</finalName>
		<resources>
			<!-- Plugin Resources/YAML Files -->
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>*.yml</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.5</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.4.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<minimizeJar>true</minimizeJar>
							<relocations>
								<relocation>
									<pattern>com.zaxxer</pattern>
									<shadedPattern>${project.groupId}.${project.artifactId}.shade.com.zaxxer</shadedPattern>
								</relocation>
								<relocation>
									<pattern>org.slf4j</pattern>
									<shadedPattern>${project.groupId}.${project.artifactId}.shade.org.slf4j</shadedPattern>
								</relocation>
							</relocations>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>